--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
   <!-- MDB -->
   <link rel="stylesheet" href="https://vegamovies.pages.dev/css/mdb.min.css" />
+  <style>
+    img.emoji {
+    height: 10px!important;
+}
+  </style>
 </head>
 
 <body>
